move to 0.20-SNAPSHOT, switch to serial GC and print GC stats